bugfix list not showing

--- a/Intro to Next.js V3/my-next-todo-list/app/globals.css
+++ b/Intro to Next.js V3/my-next-todo-list/app/globals.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+.todo-btn{
+    background-color:forestgreen ;
+}
